rustdsl/classes_macros/tests/compile/parse_error/expect_block.rs
use classes_macros::classes;

classes! {
    fn foo();
}

fn main() {}